travel planner added and API added

--- a/exportToHTML/Boundary/MyPlan.java.html
+++ b/exportToHTML/Boundary/MyPlan.java.html
@@ -29,7 +29,7 @@ MyPlan.java</FONT>
  */</span><span class="s1"> 
 </span><span class="s0">public class </span><span class="s1">MyPlan { 
     </span><span class="s0">private </span><span class="s1">Plan myPlan = </span><span class="s0">new </span><span class="s1">Plan()</span><span class="s2">;</span><span class="s1"> 
-    </span><span class="s0">public void </span><span class="s1">visited(Place place) { 
+    </span><span class="s0">public void </span><span class="s1">visited(Place location) {
  
     } 
 } 
