--- a/exportToHTML/Boundary/TravelPlanner.java.html
+++ b/exportToHTML/Boundary/TravelPlanner.java.html
@@ -45,7 +45,7 @@ TravelPlanner.java</FONT>
  
 </span><span class="s0">public class </span><span class="s1">TravelPlanner </span><span class="s0">extends </span><span class="s1">Activity { 
     String date</span><span class="s2">;</span><span class="s1"> 
-    Place[] listPlace = </span><span class="s0">new </span><span class="s1">Place[</span><span class="s4">10</span><span class="s1">]</span><span class="s2">;</span><span class="s1"> 
+    Place[] listLocation = </span><span class="s0">new </span><span class="s1">Place[</span><span class="s4">10</span><span class="s1">]</span><span class="s2">;</span><span class="s1">
     @Override 
     </span><span class="s0">protected void </span><span class="s1">onCreate(Bundle savedInstanceState) { 
         </span><span class="s0">super</span><span class="s1">.onCreate(savedInstanceState)</span><span class="s2">;</span><span class="s1"> 
