--- a/exportToHTML/Boundary/ViewDetails.java.html
+++ b/exportToHTML/Boundary/ViewDetails.java.html
@@ -34,7 +34,7 @@ ViewDetails.java</FONT>
 </span><span class="s0">import </span><span class="s1">java.lang.*</span><span class="s2">;</span><span class="s1"> 
  
 </span><span class="s3">/** 
- * This class is used to view details of a place. 
+ * This class is used to view details of a location.
  */</span><span class="s1"> 
 </span><span class="s0">public class </span><span class="s1">ViewDetails </span><span class="s0">extends </span><span class="s1">ActionBarActivity { 
  
