--- a/exportToHTML/Control/LocationPlanner.java.html
+++ b/exportToHTML/Control/LocationPlanner.java.html
@@ -29,36 +29,36 @@ LocationPlanner.java</FONT>
  */</span><span class="s1"> 
 </span><span class="s0">public class </span><span class="s1">LocationPlanner { 
     </span><span class="s3">/** 
-     * add a new place into existing plan 
+     * add a new location into existing plan
      */</span><span class="s1"> 
-    </span><span class="s0">public void </span><span class="s1">addPlace(Place place</span><span class="s2">, </span><span class="s1">Place[] listPlace) { 
+    </span><span class="s0">public void </span><span class="s1">addPlace(Place location</span><span class="s2">, </span><span class="s1">Place[] listLocation) {
  
     } 
  
     </span><span class="s3">/** 
-     * delete a place from existing plan 
-     * </span><span class="s4">@param </span><span class="s3">place 
-     * </span><span class="s4">@param </span><span class="s3">listPlace 
+     * delete a location from existing plan
+     * </span><span class="s4">@param </span><span class="s3">location
+     * </span><span class="s4">@param </span><span class="s3">listLocation
      */</span><span class="s1"> 
-    </span><span class="s0">public void </span><span class="s1">removePlace(Place place</span><span class="s2">, </span><span class="s1">Place[] listPlace) { 
+    </span><span class="s0">public void </span><span class="s1">removePlace(Place location</span><span class="s2">, </span><span class="s1">Place[] listLocation) {
  
     } 
  
     </span><span class="s3">/** 
-     * set place as starting point of the plan 
-     * </span><span class="s4">@param </span><span class="s3">place 
-     * </span><span class="s4">@param </span><span class="s3">listPlace 
+     * set location as starting point of the plan
+     * </span><span class="s4">@param </span><span class="s3">location
+     * </span><span class="s4">@param </span><span class="s3">listLocation
      */</span><span class="s1"> 
-    </span><span class="s0">public void </span><span class="s1">setStart(Place place</span><span class="s2">, </span><span class="s1">Place[] listPlace) { 
+    </span><span class="s0">public void </span><span class="s1">setStart(Place location</span><span class="s2">, </span><span class="s1">Place[] listLocation) {
  
     } 
  
     </span><span class="s3">/** 
-     * set the place as last point of the plan 
-     * </span><span class="s4">@param </span><span class="s3">place 
-     * </span><span class="s4">@param </span><span class="s3">listPlace 
+     * set the location as last point of the plan
+     * </span><span class="s4">@param </span><span class="s3">location
+     * </span><span class="s4">@param </span><span class="s3">listLocation
      */</span><span class="s1"> 
-    </span><span class="s0">public void </span><span class="s1">setFinish(Place place</span><span class="s2">, </span><span class="s1">Place[] listPlace) { 
+    </span><span class="s0">public void </span><span class="s1">setFinish(Place location</span><span class="s2">, </span><span class="s1">Place[] listLocation) {
  
     } 
  
