--- a/exportToHTML/Control/PlanGenerator.java.html
+++ b/exportToHTML/Control/PlanGenerator.java.html
@@ -51,7 +51,7 @@ PlanGenerator.java</FONT>
     } 
  
     </span><span class="s3">/** 
-     * calculate the estimated time of arrival for each place 
+     * calculate the estimated time of arrival for each location
      * </span><span class="s4">@return </span><span class="s3">ETA 
      */</span><span class="s1"> 
     </span><span class="s0">public int </span><span class="s1">calculateETA() { 
@@ -68,9 +68,9 @@ PlanGenerator.java</FONT>
  
     </span><span class="s3">/** 
      * generates the plan based on given places 
-     * </span><span class="s4">@param </span><span class="s3">listPlace 
+     * </span><span class="s4">@param </span><span class="s3">listLocation
      */</span><span class="s1"> 
-    </span><span class="s0">public void </span><span class="s1">generatePlan(Place[] listPlace) { 
+    </span><span class="s0">public void </span><span class="s1">generatePlan(Place[] listLocation) {
  
     } 
 } 
