--- a/exportToHTML/Entity/Place.java.html
+++ b/exportToHTML/Entity/Place.java.html
@@ -65,11 +65,11 @@ Place.java</FONT>
     } 
  
     </span><span class="s3">/** 
-     * get the details of the place 
-     * </span><span class="s4">@return </span><span class="s3">details of the place in a List 
+     * get the details of the location
+     * </span><span class="s4">@return </span><span class="s3">details of the location in a List
      */</span><span class="s1"> 
     </span><span class="s0">public </span><span class="s1">List getDetails() { 
-        </span><span class="s3">// return details of a place</span><span class="s1"> 
+        </span><span class="s3">// return details of a location</span><span class="s1">
         List details = </span><span class="s0">new </span><span class="s1">ArrayList()</span><span class="s2">;</span><span class="s1"> 
         details.add(name)</span><span class="s2">;</span><span class="s1"> 
         details.add(category)</span><span class="s2">;</span><span class="s1"> 
